--- a/about.html
+++ b/about.html
@@ -2,132 +2,72 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Obligatory about page</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <title>About devils</title>
+    <link rel="stylesheet" href="/style.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <!--HEADER & NAVIGATION-->
-    <header id="top">
-        <h1><a href="/">your · devil · friends</a></h1>
-    </header>
+    <!--NAVIGATION SIDEBAR-->
     <nav>
-        <div class="dropdown">
-            <button style="background-image: url(/images/backgrounds/button1.png);">Personal</button>
-            <div>
-                <a href="/about.html">About</a>
-                <a href="/art.html">Artwork</a>
-                <a href="/fursona.html">Fursona</a>
-            </div>
+        <header></header>
+        <div id="sidebar">
+            <script type="text/javascript" src="/sidebar.js"></script>
         </div>
-        <div class="dropdown">
-            <button style="background-image: url(/images/backgrounds/button2.png);">For you</button>
-            <div>
-                <a href="/accessibility.html">Web accessibility guide</a>
-                <a href="/freebies.html">F2U graphics</a>
-                <a href="/scans.html">Scans</a>
-            </div>
-        </div>
-        <div class="dropdown">
-            <button style="background-image: url(/images/backgrounds/button3.png);">Et cetera</button>
-            <div>
-                <a href="https://dungbeetle.neocities.org/" target="_blank">Linkroll</a>
-                <a href="https://yourdevilfriends.123guestbook.com/" target="_blank">Guestbook</a>
-            </div>
-        </div>
+        <footer></footer>
     </nav>
     <!--MAIN CONTENT-->
-    <main id="about">
-        <a href="https://picrew.me/ja/image_maker/1944831" target="_blank"><img src="/images/decor/picrew.png" alt="Picrew icon" title="That's me!" id="picrew"></a>
-        <!--BASICS-->
-        <section id="basics">
-            <p>Heya, hiya, how are ya? Name's <strong>devils</strong> (or Bruno, if you'd prefer an actual name), a 25 year-old guything from Portugal. They/them or he/him.</p>
-            <p>Besides maintaining this website, I spend plenty of time <a href="/art.html">creating art</a>, playing video games, reading and <a href="https://virtu.pet/userlookup/?user=devils" target="_blank">feeding my Neopets</a>.</p>
-            <p>I'm fairly open about being a <a href="https://morethanone.info/" target="_blank">system</a>, though I refer to the system as a whole with singular pronouns to avoid confusion. All you have to know is that at any given time it's fair to assume «I» refers to two people at once (everyone else doesn't care about the Internet).</p>
-        </section>
-        <!--BUTTONS-->
-        <section id="buttons">
-            <a href="/freebies.html"><img src="/images/freebies/buttons/halley-labs.png" alt="Halley Labs"></a>
-            <img src="/images/decor/buttons/cocksuckingfaggot.gif" alt="Cock sucking faggot">
-            <img src="/images/decor/buttons/htmldream.gif" alt="I dream in HTML">
-            <img src="/images/decor/buttons/coffee.gif" alt="Fueled by coffee">
-            <a href="https://ihatetheimperialsystem.neocities.org/" target="_blank"><img src="/images/decor/buttons/ihatetheimperialsystem.gif" alt="I hate the imperial system"></a>
-            <a href="/freebies.html"><img src="/images/freebies/buttons/jesus.png" alt="Jesus kissed men"></a>
-        </section>
-        <!--QUIZ RESULTS-->
-        <h2 style="font-family: courier;">Quiz results</h2>
-        <section id="results">
-            <div>
-                <a href="http://lu.tiny-universes.net" target="_blank"> <img src="/images/results/macygray.png" title="Which abandoned Neopet are you? I wasn't abandoned, I walked away (and did not stumble!)"></a>
-                <br><br>
-                <TABLE BORDER=0 style="margin: auto;"><TR><TD ALIGN="CENTER">
-                    <TABLE BORDER=0><TR><TD STYLE="padding:5px; font-family:Verdana; font-size:x-small; border:solid #ffffaa 1px; color:#ffffaa; background-color:#008800;">
-                    If they told you I'm mad, then they lied.<br>I'm odd, but it isn't compulsive.<br>I'm the <b>triolet</b>, bursting with pride;<br>If they told you I'm mad, then they lied.<br>No, it isn't obsessive. Now hide<br>All the spoons or I might get convulsive.<br>If they told you I'm mad then they lied.<br>I'm odd, but it isn't compulsive.</TD></TR></TABLE> <A HREF="http://quiz.ravenblack.net/poeticform.pl">What Poetry Form Are You?</A>
-                    </TD></TR>
-                </TABLE>
-                <br>
-                <a href="http://www.dragonflycave.com/quizzes/what-pokemon-are-you"><img src="http://www.dragonflycave.com/wpay/charizard.gif" alt="I am a Charizard!" title="Find out what Pokémon you are at The Cave of Dragonflies"></a>
-                <br><br>
-                <a href='https://clownfredzone.neocities.org/clownquiz.html'><img src='https://clownfredzone.neocities.org/cq/PierrotLarge1.png' alt='I am a Pierrot Mime! Click here to take the clown quiz!'></a>
-                <br><br>
-                <a href="http://dokodemo.neocities.org/gamelounge/splatidol.html"><img src="http://dokodemo.neocities.org/gamelounge/splatoon/shiver.png" alt="Shiver" title="You're most like Shiver from Deep Cut!"></a>
-            </div>
-            <div>
-                <div style="max-width: 100%; min-width: 100%;background-color: #fff;color: #000;display: block;padding: 10px;border: 1px solid;margin: auto;font-family: 'times';font-size: '15pt';">
-                    <p style="margin: 0">This page is protected by a</p>
-                    <h1 class="title" style="margin: 0">CAT</h1>
-                    <img class="image" style="max-width: 160px;border: 1px solid" alt="CAT" src="https://i.ibb.co/Bc2KW7v/cat.jpg">
-                    <p class="description">Cats are believed to be the only mammals who don't taste sweetness.</p>
-                    <small>
-                      <a href="https://hekate.neocities.org">Want your own? Visit hekate.neocities.org!</a>
-                    </small>
-                </div>
-                <br>
-                <div class="uquiz">
-                    <img src="/images/results/pathetic_grown_man.jpg" alt="Pathetic grown man">
-                    <p>Your Result:</p>
-                    <p><strong>pathetic grown man</strong></p>
-                    <p>impressive how youve spent your entire life fumbling the bag</p>
-                    <p><a href="https://uquiz.com/quiz/2lqf0f?p=4193171" target="_blank">what common trope are you?</a></p>
-                </div>
-            </div>
-        </section>
-        <!--FRIENDS-->
-        <aside id="friends">
-            <h3 style="font-family: courier;">Pals</h3>
-            <a href="https://mortalsins.neocities.org/" target="_blank"><img src="/images/link-buttons/mortalsins.png" alt="MortalSins" title="Patrick!"></a>
-            <a href="https://ochame.neocities.org/" target="_blank"><img src="/images/link-buttons/ochame.gif" alt="Ochame" title="Nona!"></a>
-            <a href="https://dokode.moe/" target="_blank"><img src="/images/link-buttons/dokodemo.gif" alt="DokoDemo" title="Suni!"></a>
-            <a href="https://feelingmachine.moe/" target="_blank"><img src="/images/link-buttons/feelingmachine.gif" alt="FeelingMachine" title="Nephro!"></a>
-            <!--DECOR-->
-            <a href="https://youtu.be/4svlrjm98i8" target="_blank"><img src="/images/decor/solong.gif" alt="so long..."></a>
-            <marquee style="margin-top: 10px;">
-                <a href="https://ochame.neocities.org/badge" style="text-decoration: none;" target="_blank">
-                    <img src="/images/decor/badges/404.png" alt="How did we get here...?">
-                    <img src="/images/decor/badges/64disk.png" alt="64 Disk Drives">
-                    <img src="/images/decor/badges/10thousand.png" alt="10 Thousand Fireflies">
-                    <img src="/images/decor/badges/scaperune.png" alt="Badgelike Thing">
-                    <img src="/images/decor/badges/bond.png" alt="Membership Badge">
-                    <img src="/images/decor/badges/fenne.png" alt="Celebrate 10 years of Kalos with Fennekin!">
-                    <img src="/images/decor/badges/pride.png" alt="Under the Arch">
-                    <img src="/images/decor/badges/aro.png" alt="Oh So Aromatic!">
-                    <img src="/images/decor/badges/trans.png" alt="Tea Kitten">
-                    <img src="/images/decor/badges/yarr.png" alt="Arr me matey!">
-                </a>
-            </marquee>
-        </aside>
+    <main>
+        <header>
+            <h1>About devils</h1>
+        </header>
+        <article>
+            <figure style="float: right; margin-left: 5px; margin-right: 0; margin-bottom: 5px; width: 200px; text-align: center;">
+                <img src="/images/decor/picrew.png" alt="Picrew-generated image.">
+                <figcaption>We look like this! (<a href="https://picrew.me/ja/image_maker/1944831" target="_blank">credit</a>)</figcaption>
+            </figure>
+            <p>Heya, hiya, how are ya? Name's devils (or Bruno, if you'd prefer an actual name)- 25 year-old <a href="https://morethanone.info/" target="_blank">system</a> from Portugal, they/them or he/him.</p>
+            <p>Besides maintaining this site, we spend a considerable amount of time drawing, playing video games and <a href="https://www.moderneopets.com/userlookup/402" target="_blank">feeding our Neopets</a>.</p>
+            <p>We're very opinionated, though typically open-minded and open to discussion. If you're confused or upset by something we've said, feel free to reach out! We love hearing others' viewpoints- as long as you also want a productive conversation, that is.</p>
+            <p>We're also pretty left in the political spectrum (we're not educated enough on the topic to properly label ourselves as anything other than «leftist», though), and very firmly against art censorship and bigotry. Additionally, we're schizophrenic and that can affect the way we communicate with others (namely a lack of coherency and a tendency to isolate).</p>
+            <details>
+                <summary>Contact info & elsewhere</summary>
+                <ul>
+                    <li><a href="mailto:heckmaster@protonmail.com">E-mail</a> (best way to contact us)</li>
+                    <li>Tumblr: <a href="https://heckmaster.tumblr.com/" target="_blank">@heckmaster</a> (reblog) + <a href="https://yourdevilfriends.tumblr.com/" target="_blank">@yourdevilfriends</a> (art)</li>
+                    <li>Mastodon: <a href="https://aethy.com/@yourdevilfriends" target="_blank">@yourdevilfriends@aethy.com</a></li>
+                    <li>MelonLand Forum: <a href="https://forum.melonland.net/index.php?action=profile;u=641" target="_blank">@devils</a></li>
+                    <li>Modern Neopets: <a href="https://www.moderneopets.com/userlookup/402" target="_blank">devils (#402)</a></li>
+                    <li>Virtu.Pet: <a href="https://virtu.pet/userlookup/?user=devils" target="_blank">devils</a>.</li>
+                </ul>
+            </details>
+        </article>
     </main>
-    <!--FOOTER-->
-    <footer>
-        <a href="/freebies.html"><img src="/images/freebies/adopts/tattletail.gif" style="float: left; margin-top: 25px; margin-left: 100px;"></a>
-        <a href="/freebies.html"><img src="/images/freebies/adopts/tattletail.gif" style="float: right; margin-top: 25px; margin-right: 100px;"></a>
-        <p>yourdevilfriends was created by Bruno «devils» A.<br>
-        2023-whenever</p>
-        <img src="/images/decor/divider.gif"><img src="/images/decor/buttons/powered.gif" alt="Powered by pure evil"><img src="/images/decor/divider.gif">
-    </footer>
-    <!--BACK TO TOP-->
-    <button id="back">
-        <a href="#top"><img src="/images/decor/arrow.gif" alt="Back to top"></a>
-    </button>
+    <!--ASIDE-->
+    <aside>
+        <!--QUIZ RESULTS-->
+        <div style="max-width: 270px; min-width: 270px;background-color: #fff;color: #000;display: block;padding: 10px;border: 1px solid;margin: auto;font-family: 'times';font-size: '15pt'; margin-bottom: 20px;">
+            <p style="margin: 0">This page is protected by a</p>
+            <h1 class="title" style="margin: 0">CAT</h1>
+            <img class="image" style="max-width: 160px;border: 1px solid" alt="CAT" src="https://i.ibb.co/Bc2KW7v/cat.jpg">
+            <p class="description">Cats are believed to be the only mammals who don't taste sweetness.</p>
+            <small>
+              <a href="https://hekate.neocities.org">Want your own? Visit hekate.neocities.org!</a>
+            </small>
+        </div>
+        <a href="http://dokode.moe/gamelounge/splatidol.html"><img src="http://dokodemo.neocities.org/gamelounge/splatoon/shiver.png" alt="Shiver" title="You're most like Shiver from Deep Cut!"></a>
+        <!--BADGES-->
+        <h3><a href="https://ochame.neocities.org/badge" target="_blank">Badges</a></h3>
+        <img src="/images/decor/badges/404.png" alt="How did we get here...?">
+        <img src="/images/decor/badges/64disk.png" alt="64 Disk Drives">
+        <img src="/images/decor/badges/10thousand.png" alt="10 Thousand Fireflies">
+        <img src="/images/decor/badges/scaperune.png" alt="Badgelike Thing">
+        <img src="/images/decor/badges/bond.png" alt="Membership Badge">
+        <img src="/images/decor/badges/fenne.png" alt="Celebrate 10 years of Kalos with Fennekin!">
+        <img src="/images/decor/badges/pride.png" alt="Under the Arch">
+        <img src="/images/decor/badges/aro.png" alt="Oh So Aromatic!">
+        <img src="/images/decor/badges/trans.png" alt="Tea Kitten">
+        <img src="/images/decor/badges/yarr.png" alt="Arr me matey!">
+        </marquee>
+    </aside>
 </body>
 </html>
