--- a/index.html
+++ b/index.html
@@ -2,113 +2,61 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The devils' den</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <title>The devil's den</title>
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://transmascring.netlify.app/tmring.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <!--HEADER & NAVIGATION-->
-    <header id="top">
-        <h1><a href="/">your · devil · friends</a></h1>
-    </header>
+    <!--NAVIGATION SIDEBAR-->
     <nav>
-        <div class="dropdown">
-            <button style="background-image: url(/images/backgrounds/button1.png);">Personal</button>
-            <div>
-                <a href="/about.html">About</a>
-                <a href="/art.html">Artwork</a>
-                <a href="/fursona.html">Fursona</a>
-            </div>
+        <header></header>
+        <div id="sidebar">
+            <script type="text/javascript" src="/sidebar.js"></script>
         </div>
-        <div class="dropdown">
-            <button style="background-image: url(/images/backgrounds/button2.png);">For you</button>
-            <div>
-                <a href="/accessibility.html">Web accessibility guide</a>
-                <a href="/freebies.html">F2U graphics</a>
-                <a href="/scans.html">Scans</a>
-            </div>
-        </div>
-        <div class="dropdown">
-            <button style="background-image: url(/images/backgrounds/button3.png);">Et cetera</button>
-            <div>
-                <a href="https://dungbeetle.neocities.org/" target="_blank">Linkroll</a>
-                <a href="https://yourdevilfriends.123guestbook.com/" target="_blank">Guestbook</a>
-            </div>
-        </div>
+        <footer></footer>
     </nav>
     <!--MAIN CONTENT-->
-    <main id="index">
-        <!--WELCOME-->
-        <section id="welcome">
-            <h2>Welcome · <span lang="pt">Bem-vindo</span> · <span lang="fr">Bienvenue</span></h2>
-            <div>
-                <p>This is <em>yourdevilfriends.art</em>, a personal website maintained by <strong>devils</strong>. Made with self-indulgence in mind and not much else, it's a mere hobby that I turned into my main online presence.</p>
-                <p>By all means, feel free to poke around. Maybe you'll even find one or two things of interest.</p>
-            </div>
-            <h2>Obligatory contact information</h2>
-            <div>
-                <p>The best way to contact me is through <a href="mailto:heckmaster@protonmail.com">e-mail</a>. I'm additionally really active on Discord, so feel free to ask for my handle there.</p>
-                <p>As for social media, I'm only active on Tumblr (<a href="https://heckmaster.tumblr.com/" target="_blank">main blog</a> & <a href="https://yourdevilfriends.tumblr.com/" target="_blank">art blog</a>) and <a href="https://aethy.com/@yourdevilfriends" target="_blank" rel="me">Mastodon</a>. You may also find me at <a href="https://forum.melonland.net/index.php?action=profile;u=641" target="_blank">MelonLand Forum.</a></p>
-            </div>
-        </section>
-        <!--WEBRINGS-->
-        <aside id="webrings">
-            <!-- TRANSMASC RING -->
-            <center>
-                <div id="tmring">
-                    <div id="tmri">
-                    <img src="https://transmascring.netlify.app/tiny.png"><br>
-                    <p>Transmasculine Pride Webring</p>
-                    <a href="https://transmascring.netlify.app/devils/previous" target="_blank"><< prev</a> | <a href="https://transmascring.netlify.app" target="_blank">index</a> | <a href="https://transmascring.netlify.app/devils/next" target="_blank">next >> </a>
-                    </div> 
-                </div>
-            </center>
-            <!--*NIXRING-->
-            <div id='linuxring'>
-                <script type="text/javascript" src="https://teethinvitro.neocities.org/webring/linuxring/script/onionring-variables.js"></script>
-                <script type="text/javascript" src="https://teethinvitro.neocities.org/webring/linuxring/script/onionring-widget.js"></script>
-            </div>
-            <!--BAYANET-->
-            <a href="https://ochame.neocities.org/bayanet"><img src="https://ochame.neocities.org/assets/bayanet/v2/devils.png"></a>
-        </aside>
-        <!--BUTTON WALL-->
-        <aside id="notebook">
-            <header></header>
-            <div>
-                <a href="https://cyber-rot.neocities.org/mine" target="_blank"><img src="/images/decor/buttons/ao3.gif" alt="Pro AO3 freak"></a>
-                <a href="https://sightseer.neocities.org/graphics/" target="_blank"><img src="/images/decor/buttons/art.png" alt="I support artistic freedom"></a>
-                <a href="https://www.deviantart.com/kouenli/art/No-Bad-Hair-Days-On-The-Internet-682431234" target="_blank"><img src="/images/decor/buttons/badhair.png" alt="There are ni bad hair days on the Internet"></a>
-                <img src="/images/decor/buttons/freespeech.gif" alt="Free speech forever">
-                <img src="/images/decor/buttons/piracy.gif" alt="Piracy now!">
-                <img src="/images/decor/buttons/gothere.gif" alt="Go to Hell now!">
-                <img src="/images/decor/buttons/linux.gif" alt="Linux now!">
-                <a href="https://dokode.moe/graphics" target="_blank"><img src="/images/decor/buttons/mikumustdie.gif" alt="Miku must die"></a>
-            </div>
-            <footer></footer>
-        </aside>
-        <!--WARNINGS & CREDIT-->
-        <section id="disclaimers">
-            <h2>Content warnings</h2>
-            <div>
-                <p>Despite the colorful graphics, this website is <strong>not meant for children</strong>. Suggestive themes, trauma and violence are recurring topics within my art, and the books I talk about aren't typically meant for a young audience either.</p>
-                <p>Viewer discretion is advised.</p>
-            </div>
-            <h2>Credits</h2>
-            <div>Unless the source of a graphic is not known, clicking on an image will redirect visitors to the original source.</div>
-        </section>
+    <main>
+        <header>
+            <h1>The devil's den</h1>
+        </header>
+        <article>
+            <p>Welcome to the home of devilishly good times! This here is a personal site with a large focus on art that ended up being outr main online footprint.</p>
+            <p>Stay a while, will ya? Maybe you'll even find something of interest.</p>
+            <p><strong>Mature content warning!</strong> Despite the colorful graphics, this site explores violent and suggestive themes, namely in the artwork pages. By browsing the site further, you consent to seeing these things.</p>
+            <details>
+                <summary>Accessibility statement</summary>
+                <ul>
+                    <li>Uses semantic HTML and alt text as much as possible.</li>
+                    <li>Contains minimal flashing GIFs.</li>
+                    <li>Does not contain autoplayed audio or videos.</li>
+                    <li>Relies on Javascript for navigation, image galleries and webrings.</li>
+                    <li>Tested for screen readers using Orca.</li>
+                    <li>Not mobile friendly.</li>
+                </ul>
+            </details>
+        </article>
     </main>
-    <!--FOOTER-->
-    <footer>
-        <a href="/freebies.html"><img src="/images/freebies/adopts/tattletail.gif" style="float: left; margin-top: 25px; margin-left: 100px;"></a>
-        <a href="/freebies.html"><img src="/images/freebies/adopts/tattletail.gif" style="float: right; margin-top: 25px; margin-right: 100px;"></a>
-        <p>yourdevilfriends was created by Bruno «devils» A.<br>
-        2023-whenever</p>
-        <img src="/images/decor/divider.gif"><img src="/images/decor/buttons/powered.gif" alt="Powered by pure evil"><img src="/images/decor/divider.gif">
-    </footer>
-    <!--BACK TO TOP-->
-    <button id="back">
-        <a href="#top"><img src="/images/decor/arrow.gif" alt="Back to top"></a>
-    </button>
+    <!--WEBRINGS-->
+    <aside>
+        <!-- TRANSMASC RING -->
+        <center>
+            <div id="tmring">
+                <div id="tmri">
+                <img src="https://transmascring.netlify.app/tiny.png"><br>
+                <p>Transmasculine Pride Webring</p>
+                <a href="https://transmascring.netlify.app/devils/previous" target="_blank"><< prev</a> | <a href="https://transmascring.netlify.app" target="_blank">index</a> | <a href="https://transmascring.netlify.app/devils/next" target="_blank">next >> </a>
+                </div> 
+            </div>
+        </center>
+        <!--*NIXRING-->
+        <div id='linuxring'>
+            <script type="text/javascript" src="https://teethinvitro.neocities.org/webring/linuxring/script/onionring-variables.js"></script>
+            <script type="text/javascript" src="https://teethinvitro.neocities.org/webring/linuxring/script/onionring-widget.js"></script>
+        </div>
+        <!--BAYANET-->
+        <a href="https://ochame.neocities.org/bayanet"><img src="https://ochame.neocities.org/assets/bayanet/v2/devils.png" id="bayanet"></a>          
+    </aside>
 </body>
 </html>
