--- a/accessibility.html
+++ b/accessibility.html
@@ -3,41 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <title>Web accessibility guide</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <style>
+    .emoji {
+        width: 1rem;
+        display: inline-block;
+    }
+
+    .center {
+        display: block;
+        margin: auto;
+    }
+
+    .flashing {
+        -webkit-filter: blur(5px); /* For Safari 6.0 - 9.0 */
+        filter: blur(5px);
+    }
+    
+    .flashing:hover {
+        -webkit-filter: none;
+        filter: none;
+    }
+    </style>
 </head>
 <body>
-    <!--HEADER & NAVIGATION-->
-    <header id="top">
-        <h1><a href="/">your · devil · friends</a></h1>
-    </header>
+    <!--NAVIGATION SIDEBAR-->
     <nav>
-        <div class="dropdown">
-            <button style="background-image: url(/images/backgrounds/button1.png);">Personal</button>
-            <div>
-                <a href="/about.html">About</a>
-                <a href="/art.html">Artwork</a>
-                <a href="/fursona.html">Fursona</a>
-            </div>
+        <header></header>
+        <div id="sidebar">
+            <script type="text/javascript" src="/sidebar.js"></script>
         </div>
-        <div class="dropdown">
-            <button style="background-image: url(/images/backgrounds/button2.png);">For you</button>
-            <div>
-                <a href="/accessibility.html">Web accessibility guide</a>
-                <a href="/freebies.html">F2U graphics</a>
-                <a href="/scans.html">Scans</a>
-            </div>
-        </div>
-        <div class="dropdown">
-            <button style="background-image: url(/images/backgrounds/button3.png);">Et cetera</button>
-            <div>
-                <a href="https://dungbeetle.neocities.org/" target="_blank">Linkroll</a>
-                <a href="https://yourdevilfriends.123guestbook.com/" target="_blank">Guestbook</a>
-            </div>
-        </div>
+        <footer></footer>
     </nav>
     <!--MAIN CONTENT-->
     <main>
+        <header>
+            <h1>Web accessibility guide</h1>
+        </header>
         <article>
             <!--INTRODUCTION & TABLE OF CONTENTS-->
             <p>Whenever I browse personal websites, it's often I notice a lack of thought from their Webmasters when it comes to browsing the Web in a way different than their own.</p>
@@ -83,7 +86,7 @@
             <p>It's very easy to implement. You merely have to add the alt= attribute to the img tag. Here's an example:</p>
             <pre>&ltimg src="cat.png" alt="Picture of a cat"&gt</pre>
             <p>Of course, for more complex images you will have to write longer alt text. However, avoid details that are unnecessary to the overall message. Don't go on tangents about the color of a character's clothes when the main focus is what they're doing, for example.</p>
-            <img src="/images/bosch.png" alt="Detail of Hieronymus Bosch's The Temptation of Saint Anthony. It features and anthropomorphic bird-like creature holding a letter in its beak.">
+            <img src="/images/bosch.png" class="center" alt="Detail of Hieronymus Bosch's The Temptation of Saint Anthony. It features and anthropomorphic bird-like creature holding a letter in its beak.">
             <p>For this image, we decided to use a detail of a painting by Bosch. Here is the alt text we wrote, for those who don't want to access the page source:</p>
             <q>Detail of Hieronymus Bosch's The Temptation of Saint Anthony. It features and anthropomorphic bird-like creature holding a letter in its beak.</q>
             <p>Take special care regarding decorative images and image-heavy galleries. If an image is meant as a decoration, one or two words might be enough, while image-heavy galleries should have brief descriptions. This is because screen readers will take ages to read out a page while focusing on the wrong things.</p>
@@ -124,7 +127,7 @@
             <!--FONTS-->
             <h2 id="fonts">Fonts and readability</h2>
             <p>Fonts are obviously very important if you want to have text on a website. It's important to consider certain things when implementing font styling though.</p>
-            <p>Secondly, make sure the size isn't too small- 1rem (which is the standard font size) is quite good, we recommend not going under .8rem as the text might be too small for users to read. Remember, just because you can read small text, that doesn't mean everyone can- even users that aren't visually impaired might have trouble reading tiny text.</p>
+            <p>Secondly, make sure the size isn't too small- 1em (which is the standard font size) is quite good, we recommend not going under .8rem as the text might be too small for users to read. Remember, just because you can read small text, that doesn't mean everyone can- even users that aren't visually impaired might have trouble reading tiny text.</p>
             <p>Color is equally important. The colors must contrast against each other in a way that doesn't cause eye-strain. So, we recommend avoiding bright text on bright backgrounds, pastel text on pastel backgrounds, et cetera.</p>
             <p>Finally, to make things easier for dyslexic users, there are many things you can change to make the text easier to read, such as word/letter spacing, avoiding justified text... This is covered in-depth by <a href="https://solaria.neocities.org/" target="_blank">solaria</a>'s' <a href="https://solaria.neocities.org/readability" target="_blank">readability guide</a>, I highly recommend checking it out!</p>
             <!--EMOJIS-->
@@ -159,12 +162,14 @@
     filter: none;
 }</pre>
             <p>The blur effect should be around 5 pixels like the code above, but you might have to tweak it a bit depending on how flashy your GIF is.</p>
+            <p>This code has been applied to this blinkie (it's not seizure-inducing):</p>
+            <img src="/images/freebies/blinkies/thanks-paul.gif" class="center flashing" alt="Blinkie">
             <!--TRANSCRIPTS-->
             <h2 id="transcripts">Transcripts for audio</h2>
             <p>Similarly to people who can't see well, there are people who can't hear well. As such, it's pretty important to add transcripts of relevant audio.</p>
             <p>Beside helping HOH people, it will also allow users with no sound on to understand the context.</p>
             <p>Here's Youtube's first ever video (Me at the zoo), with a transcript below it:</p>
-            <iframe width="100%" height="500px" src="https://www.youtube-nocookie.com/embed/jNQXAC9IVRw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="300px" src="https://www.youtube-nocookie.com/embed/jNQXAC9IVRw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <q>Jawed Karim: [to the camera] All right, so here we are in front of the, uh, elephants, and the cool thing about these guys is that, is that they have really, really, really long, um, trunks, and that's, that's cool, and that's pretty much all there is to say.</q>
             <p>This transcript was copy-pasted from <a href="https://en.wikiquote.org/wiki/Me_at_the_zoo" target="_blank">Wikiquote</a>, as I could barely understand what the guy was saying myself. It's important to note that videos with proper captions in them don't require transcripts.</p>
             <p>Naturally, it takes a lot of work if the video is long. However, anything that is relevant to the overall point of the page should have transcripts- even if you leave some things out, such as the stutters or irrelevant jokes.</p>
@@ -174,17 +179,5 @@
             <p>There are programs that allow you to shave off the size of image files, such as <a href="https://pnggauntlet.com/" target="_blank">PNGGauntlet</a> (for Windows) or <a href="https://github.com/Huluti/Curtail" target="_blank">Curtail</a> (for Linux). There are also browser-based solutions, such as <a href="https://squoosh.app/" target="_blank">Squoosh</a> and <a href="https://ezgif.com/" target="_blank">EZGIF</a>. The latter allows users for multiple file types, including GIFs, so it's especially recommended.</p>
         </article>
     </main>
-    <!--FOOTER-->
-    <footer>
-        <img src="/images/freebies/adopts/tattletail.gif" style="float: left; margin-top: 25px; margin-left: 100px;">
-        <img src="/images/freebies/adopts/tattletail.gif" style="float: right; margin-top: 25px; margin-right: 100px;">
-        <p>yourdevilfriends was created by Bruno «devils» A.<br>
-        2023-whenever</p>
-        <img src="/images/decor/divider.gif"><img src="/images/decor/buttons/powered.gif" alt="Powered by pure evil"><img src="/images/decor/divider.gif">
-    </footer>
-    <!--BACK TO TOP-->
-    <button id="back">
-        <a href="#top"><img src="/images/decor/arrow.gif" alt="Back to top"></a>
-    </button>
 </body>
 </html>
