--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
         <img src="/images/decor/badges/aro.png" alt="Oh So Aromatic!">
         <img src="/images/decor/badges/trans.png" alt="Tea Kitten">
         <img src="/images/decor/badges/yarr.png" alt="Arr me matey!">
-        </marquee>
+        <img src="/images/decor/badges/20thousans.png" alt="Neopolis Planet - 20000km">
     </aside>
 </body>
 </html>
