--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>The devil's den</h1>
         </header>
         <article>
-            <p>Welcome to the home of devilishly good times! This here is a personal site with a large focus on art that ended up being outr main online footprint.</p>
+            <p>Welcome to the home of devilishly good times! This here is a personal site with a large focus on art that ended up being our main online footprint.</p>
             <p>Stay a while, will ya? Maybe you'll even find something of interest.</p>
             <p><strong>Mature content warning!</strong> Despite the colorful graphics, this site explores violent and suggestive themes, namely in the artwork pages. By browsing the site further, you consent to seeing these things.</p>
             <details>
