--- a/scans.html
+++ b/scans.html
@@ -24,6 +24,13 @@
             <h1>Scans</h1>
         </header>
         <article>
+            <!--TABLE OF CONTENTS-->
+            <h2>Table of contents</h2>
+            <ul>
+              <li><a href="#pins">Pins</a></li>
+              <li><a href="#covers">Manga covers</a></li>
+            </ul>
+            <!--PINS-->
             <h2>Pins</h2>
             <div ID="pins" data-nanogallery2='{
                 "itemsBaseURL": "https://yourdevilfriends.art/images/scans/pins/",
@@ -45,8 +52,8 @@
               <a href="alastor2.png" data-ngthumb="alastor2.png" data-ngdesc="Valentines Alastor"></a>
               <a href="alastor1.png" data-ngthumb="alastor1.png" data-ngdesc="Pilot Alastor"></a>
               <a href="angeldust1.png" data-ngthumb="angeldust1.png" data-ngdesc="Pilot Angel Dust"></a>
-        
             </div>
+            <!--MANGA COVERS-->
             <h2>Covers</h2>
             <div ID="covers" data-nanogallery2='{
                 "itemsBaseURL": "https://yourdevilfriends.art/images/scans/covers/",
